# voxel-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml
client/: Cargo.toml
client/src/: input.rs  main.rs  mainmenu.rs  settings.rs  singleplayer.rs  texture.rs  window.rs  world.rs
client/src/gui/: experiments.rs  mod.rs
client/src/render/: buffers.rs  iced.rs  init.rs  mod.rs  render.rs  ui.rs
client/src/render/world/: meshing.rs  meshing_worker.rs  mod.rs  skybox.rs
client/src/ui/: compositor.rs  mainmenu.rs  mod.rs  pausemenu.rs  widgets.rs
common/: Cargo.toml
common/src/: collections.rs  debug.rs  time.rs  worker.rs  world.rs
common/src/data/: mod.rs
common/src/light/: mod.rs
common/src/network/: dummy.rs  messages.rs  mod.rs
common/src/physics/: camera.rs  mod.rs  player.rs  simulation.rs
common/src/world/: mod.rs
common/src/worldgen/: mod.rs  topology.rs
network/src/: channel.rs  client.rs  lib.rs  packet.rs  server.rs  socket.rs  types.rs
network/tests/: connection.rs  connection_loss.rs
network/tests/common/: mod.rs
server/: Cargo.toml
server/src/: lib.rs  light.rs  server.rs  world.rs  worldgen.rs
server/src/light/: mod.rs  sunlight.rs  worker.rs
server/src/world/: chunkstore.rs  mod.rs
