[package]
name = "voxel-rs-server"
version = "0.1.0"
authors = ["Technici4n", "Azercoco"]
edition = "2018"

[dependencies]
# Voxel-rs
voxel-rs-common = { path = "../common" }

# Utilities
anyhow = "1.0"
env_logger = "0.8"
lazy_static = "1.4.0"
log = "0.4"

# Math
nalgebra = { version = "0.23", features = ["serde-serialize"] }

# World Loading
bincode = "1.3.1"
serde = { version = "1.0.118", features = ["rc"] }
